...
            "state" : "translated",
            "value" : "拉取映像檔"
          }
        }
      }
    },
    "持久终端" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Persistent Terminal"
...
